--- a/proyecto final.html
+++ b/proyecto final.html
@@ -37,6 +37,14 @@
         <li>SQL</li>
         
     </ul>
+          <h2>Habilidades</h2>
+    <ul>
+        <li>Orientada a resultados</li>
+        <li>Manejo del inglés técnico</li>
+        <li>Buena disposición para el trabajo en equipo</li>
+        <li>Comunicación efectiva</li>
+        
+    </ul>
     </section>
    <script>
         console.log
@@ -47,7 +55,7 @@
 
 document.addEventListener('click', function () {
     console.log("Habilidades");
-    document.getElementById("demo").innerHTML = "lalala");
+    document.getElementById("demo").innerHTML = "");
 }
 
 
